# filorust

./: .gitignore  Cargo.toml  README.md
crates/config/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: fs_ops.rs  lib.rs
crates/previewer/: Cargo.toml
src/: app.rs  main.rs
ui/: appwindow.slint
